[package]
name = "mond"
version = "0.1.0"
authors = ["Brian L. Troutwine", "J.C. Moyer"]
description = "A Rust Lua 5.3"
documentation = "https://docs.rs/mond"
repository = "https://github.com/blt/mond"
readme = "README.md"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"
links = "lua"

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "1.0"
libc = "0.2"
